--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
 spring.application.name=auditmanagement_DAM
+# Oracle connection settings
+#spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XEPDB1
+#spring.datasource.username=msd
+#spring.datasource.password=msd
+
+# PostgreSQL connection settings
+spring.datasource.url=jdbc:postgresql://localhost:5432/DAM
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# Spring Validation activation
+spring.jpa.properties.javax.persistence.validation.mode=none
+spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
+
+# Spring JPA naming strategies
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+
+# Spring JPA: schema generation
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.hibernate.ddl-auto = none
+
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
