--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,10 +20,13 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 # Spring JPA: schema generation
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto = create
-spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 #spring.jpa.hibernate.ddl-auto = none
 
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
+
+logging.level.org.hibernate=DEBUG
+
