--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ logging.level.org.hibernate.SQL=debug
 
 logging.level.org.hibernate=DEBUG
 
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
