--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+server.port=8088
+server.servlet.context-path=/api
+spring.data.rest.basePath=/data
+server.servlet.session.persistent=false
+
 spring.application.name=auditmanagement_DAM
 # Oracle connection settings
 #spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XEPDB1
