--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,26 @@ logging.level.org.hibernate=DEBUG
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+
+# SpringBoot Security
+# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
+#spring.security.user.name=developer
+#spring.security.user.password=msd
+
+# SprinBoot Data REST
+#spring.hateoas.use-hal-as-default-json-media-type=false
+#spring.data.rest.defaultMediaType = application/json
+
+# Exposes all public repository interfaces but considers @(Repository)RestResource\u2019s `exported flag.
+#spring.data.rest.detection-strategy=default
+
+# Exposes all repositories independently of type visibility and annotations.
+#spring.data.rest.detection-strategy=all
+
+# Only repositories annotated with @(Repository)RestResource are exposed, unless their exported flag is set to false.
+spring.data.rest.detection-strategy=annotated
+
+# Only public repositories annotated are exposed.
+#spring.data.rest.detection-strategy=visibility
+spring.jackson.serialization.fail-on-empty-beans=false
