--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 backend.url.projects=http://localhost:8088/api/rest/app/project
+backend.url.clients=http://localhost:8088/api/rest/app/clients
 # To improve the performance during development. 
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 # vaadin.whitelisted-packages= org/vaadin/example
