--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@ server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 backend.url.projects=http://localhost:8088/api/rest/app/project
 backend.url.clients=http://localhost:8088/api/rest/app/clients
+backend.url.teams=http://localhost:8088/api/rest/app/teams
+backend.url.employees=http://localhost:8088/api/rest/app/employees
+backend.url.tasks=http://localhost:8088/api/rest/app/tasks
+backend.url.vulnerabilities=http://localhost:8088/api/rest/app/vulnerabilities
+backend.url.reports=http://localhost:8088/api/rest/app/reports
 # To improve the performance during development. 
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 # vaadin.whitelisted-packages= org/vaadin/example
