--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ backend.url.employees=http://localhost:8088/api/rest/app/employees
 backend.url.tasks=http://localhost:8088/api/rest/app/tasks
 backend.url.vulnerabilities=http://localhost:8088/api/rest/app/vulnerabilities
 backend.url.reports=http://localhost:8088/api/rest/app/reports
+vaadin.theme.custom-theme = custom-theme
 # To improve the performance during development. 
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 # vaadin.whitelisted-packages= org/vaadin/example
