--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,8 @@ spring.jpa.hibernate.namvn -vming.implicit-strategy=org.hibernate.boot.model.nam
 # Spring JPA: schema generation
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto = create
-#spring.jpa.hibernate.ddl-auto = update
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = create-drop
 #spring.jpa.hibernate.ddl-auto = none
 
 # logging
